feature: applicationset for globex app services

--- a/inventories/inventory.template
+++ b/inventories/inventory.template
@@ -1,1 +1,20 @@
 [all:vars]
+
+num_users=2
+user_prefix=user
+
+application_namespace_prefix=globex-
+
+application_repo=https://github.com/cloud-services-summit-connect-2022/app-services-helm.git
+application_repo_tag=main
+application_repo_path=globex
+
+activity_tracking_service_image=
+activity_tracking_simulator_image=
+catalog_db_image=
+catalog_service_image=
+globex_ui_image=
+inventory_service_image=
+inventory_db_image=
+order_placement_service_image=
+recommendation_engine_image=
